Labs/Lab-1.1-Node/openmct.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openmct
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: openmct
    spec:
      serviceAccountName: appd-account
      containers:
        - name: openmct
          image: sashaz/openmct:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: openmct
spec:
  selector:
    name: openmct
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  type: NodePort
