Labs/Lab-1.1-Node/openmct-ingress-gke.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "openmct-ingress"
  labels:
    app: openmct-ingress
spec:
  backend:
    serviceName: "openmct"
    servicePort: 8080
