Labs/Lab-1.1-Node/openmct-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "openmct-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: openmct-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "openmct"
              servicePort: 8080
